--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -18,34 +18,14 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Dopetrope</a></h1>
+						<h1><a href="index.html">TravelHer Women solo trip</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-												<li><a href="#">Nisl sed aliquam</a></li>
-												<li><a href="#">Dolore adipiscing</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="no-sidebar.html">Home</a></li>
+								<li><a href="no-sidebar.html">Interative Map</a></li>
+								<li><a href="no-sidebar.html">Blogspot</a></li>
 							</ul>
 						</nav>
 
@@ -119,7 +99,7 @@
 
 			<!-- Footer -->
 				<section id="footer">
-					<div class="container">
+					<!-- <div class="container">
 						<div class="row">
 							<div class="col-8 col-12-medium">
 								<section>
@@ -234,16 +214,15 @@
 										</li>
 									</ul>
 								</section>
-							</div>
+							</div> -->
 							<div class="col-12">
 
 								<!-- Copyright -->
 									<div id="copyright">
 										<ul class="links">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; TravelHer. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 										</ul>
 									</div>
-
 							</div>
 						</div>
 					</div>
